<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.NameAndMapFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createDocEntryText"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin15sdp"
                android:fontFamily="@font/viga"
                android:shadowColor="@color/black"
                android:shadowDx="6"
                android:shadowDy="3"
                android:shadowRadius="10"
                android:text="@string/create_doc_entry"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/docNameTextInputFieldLayoutDocCreation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10sdp"
                android:layout_marginTop="@dimen/margin15sdp"
                android:layout_marginEnd="@dimen/margin10sdp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/white"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createDocEntryText"
                app:startIconDrawable="@drawable/ic_baseline_person_add_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/docNameTextInputFieldEditTextDocCreation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_doc_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/findOnGoogleMapsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15sdp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/find_your_doc_button_text"
                app:icon="@drawable/ic_baseline_map_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/docNameTextInputFieldLayoutDocCreation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonGoToCalenderFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:drawableTint="@color/dark_green"
        android:fontFamily="@font/viga"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/lowerTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>