<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activities.GreetingScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcomeTitleTextView"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin15sdp"
                android:fontFamily="@font/viga"
                android:shadowColor="@color/black"
                android:shadowDx="6"
                android:shadowDy="3"
                android:shadowRadius="10"
                android:text="@string/welcome"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInputFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10sdp"
                android:layout_marginTop="@dimen/margin15sdp"
                android:layout_marginEnd="@dimen/margin10sdp"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:counterTextColor="@color/white"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeTitleTextView"
                app:startIconDrawable="@drawable/ic_baseline_person_add_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameTextInputFieldEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_your_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityTextInputFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10sdp"
                android:layout_marginTop="@dimen/margin15sdp"
                android:layout_marginEnd="@dimen/margin10sdp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextColor="@color/white"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameTextInputFieldLayout"
                app:startIconDrawable="@drawable/ic_baseline_location_city_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityTextInputFieldEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_your_city" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkboxDefaultSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15sdp"
                android:text="@string/use_default_docs"
                android:textColor="@color/white"
                app:buttonTint="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityTextInputFieldLayout" />

            <Button
                android:id="@+id/saveUserDataButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15sdp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/get_started"
                app:icon="@drawable/ic_baseline_celebration_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkboxDefaultSettings" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>