<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin5sdp"
        app:cardBackgroundColor="@color/dark_green"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/docLogoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin15sdp"
                android:layout_marginTop="@dimen/margin5sdp"
                android:layout_marginBottom="@dimen/margin5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                tools:srcCompat="@drawable/tooth_icon" />

            <TextView
                android:id="@+id/docNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin15sdp"
                android:layout_marginTop="@dimen/margin5sdp"
                android:fontFamily="@font/viga"
                android:text="@string/docname"
                android:textColor="@color/white"
                android:textSize="@dimen/defaultTextSize"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/docLogoImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dueDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin15sdp"
                android:layout_marginBottom="@dimen/margin5sdp"
                android:fontFamily="@font/viga"
                android:text="@string/due_date"
                android:textColor="@color/white"
                android:textSize="@dimen/lowerTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/docLogoImageView" />

            <TextView
                android:id="@+id/dateTextViewDocCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin5sdp"
                android:layout_marginBottom="@dimen/margin5sdp"
                android:fontFamily="@font/viga"
                android:text="@string/dummy_date"
                android:textColor="@color/white"
                android:textSize="@dimen/lowerTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/dueDateTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>