<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.TimeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pickTimeTitle"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin15sdp"
                android:fontFamily="@font/viga"
                android:shadowColor="@color/black"
                android:shadowDx="6"
                android:shadowDy="3"
                android:shadowRadius="10"
                android:text="@string/pick_your_time"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pickTimeTitle" />

            <TextView
                android:id="@+id/timeTextViewDocCreationHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/viga"
                android:text="@string/time_system_24h"
                android:textSize="@dimen/defaultTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timePicker" />

            <TextView
                android:id="@+id/timeTextViewDocCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5sdp"
                android:fontFamily="@font/viga"
                android:textSize="@dimen/defaultTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timeTextViewDocCreationHint" />

            <TextView
                android:id="@+id/remindTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/viga"
                android:text="@string/remindMeAt"
                android:textSize="@dimen/defaultTextSize"
                app:layout_constraintBottom_toTopOf="@id/remindTimeDropDownContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timeTextViewDocCreation" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/remindTimeDropDownContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10sdp"
                android:layout_marginEnd="@dimen/margin10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remindTimeTextView">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonFinishCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:drawableTint="@color/dark_green"
        android:fontFamily="@font/viga"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/lowerTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>